--- a/Zookeeper/Problems/lesson-info.yaml
+++ b/Zookeeper/Problems/lesson-info.yaml
@@ -4,3 +4,6 @@ content:
 - Your name
 - Alice in Wonderland
 - Plain message
+- We need learn Python
+- First, second, third
+- The result of a game in Tic-Tac-Toe
