--- a/Zookeeper/Problems/lesson-info.yaml
+++ b/Zookeeper/Problems/lesson-info.yaml
@@ -7,3 +7,13 @@ content:
 - We need learn Python
 - First, second, third
 - The result of a game in Tic-Tac-Toe
+- The type
+- Print a float number
+- A pyramid!
+- Poetry
+- Taking turns
+- Define a string
+- Hello!
+- List from string
+- Single-element list
+- Latin alphabet
