--- a/Zookeeper/Zookeeper/Show me an animal!/task-info.yaml
+++ b/Zookeeper/Zookeeper/Show me an animal!/task-info.yaml
@@ -175,5 +175,9 @@ files:
         Zookeeper('zookeeper.zookeeper').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/98/stages/540/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/98/stages/540/implement">JetBrains
+    Academy</a>
+  time: Wed, 23 Sep 2020 20:58:46 UTC
 record: -1
