--- a/Zookeeper/Zookeeper/Sustainable care  3/task-info.yaml
+++ b/Zookeeper/Zookeeper/Sustainable care  3/task-info.yaml
@@ -313,5 +313,9 @@ files:
         Zookeeper('zookeeper.zookeeper').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/98/stages/542/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/98/stages/542/implement">JetBrains
+    Academy</a>
+  time: Mon, 28 Sep 2020 19:16:20 UTC
 record: -1
